WebCore:

2009-03-11  Beth Dakin  <bdakin@apple.com>

        Reviewed by Dan Bernstein.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=14749 percentage
        top value on position:relative child not calculated correctly if
        parent has percentage height
        - and corresponding -
        <rdar://problem/6172925>

        * rendering/RenderBoxModelObject.cpp:
        (WebCore::RenderBoxModelObject::relativePositionOffsetY):

LayoutTests:

2009-03-11  Beth Dakin  <bdakin@apple.com>

        Reviewed by Dan Bernstein.

        Test for https://bugs.webkit.org/show_bug.cgi?id=14749 percentage
        top value on position:relative child not calculated correctly if
        parent has percentage height
        - and corresponding -
        <rdar://problem/6172925>

        * fast/css/percent-top-value-with-relative-position.html: Added.
        * platform/mac/fast/css/percent-top-value-with-relative-position-expected.checksum: Added.
        * platform/mac/fast/css/percent-top-value-with-relative-position-expected.png: Added.
        * platform/mac/fast/css/percent-top-value-with-relative-position-expected.txt: Added.



Canonical link: https://commits.webkit.org/33664@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41602 268f45cc-cd09-0410-ab3c-d52691b4dbfc